--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -49,8 +49,8 @@
                                  <children>
                                     <Label layoutX="297.0" layoutY="82.0" prefHeight="18.0" prefWidth="79.0" text="Name" />
                                     <TextField fx:id="markNameTextField" layoutX="297.0" layoutY="102.0" prefHeight="40.0" styleClass="" />
-                                    <Label layoutX="503.0" layoutY="82.0" prefHeight="18.0" prefWidth="71.0" text="Student ID" />
-                                    <TextField fx:id="markStuIdTextField" layoutX="503.0" layoutY="102.0" prefHeight="40.0" />
+                                    <Label layoutX="525.0" layoutY="82.0" prefHeight="18.0" prefWidth="71.0" text="Student ID" />
+                                    <TextField fx:id="markStuIdTextField" layoutX="525.0" layoutY="102.0" prefHeight="40.0" />
                                     <Label layoutX="296.0" layoutY="148.0" prefHeight="20.0" prefWidth="83.0" text="Club Name" />
                                     <TextField fx:id="markClubNameTextField" layoutX="296.0" layoutY="167.0" prefHeight="40.0" />
                                     <Label layoutX="296.0" layoutY="239.0" text="Event Name" />
@@ -59,7 +59,7 @@
                                     <RadioButton fx:id="absentRadioButton" layoutX="387.0" layoutY="342.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="78.0" text="Absent" />
                                     <RadioButton fx:id="presentRadioButton" layoutX="485.0" layoutY="342.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="79.0" text="Present" />
                                     <Button fx:id="submitButton" layoutX="506.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleSubmitButton" prefHeight="35.0" prefWidth="90.0" text="SUBMIT" />
-                                    <Button layoutX="497.0" layoutY="167.0" mnemonicParsing="false" onAction="#handleCheckButton" prefHeight="40.0" prefWidth="82.0" text="CHECK" />
+                                    <Button layoutX="525.0" layoutY="167.0" mnemonicParsing="false" onAction="#handleCheckButton" prefHeight="40.0" prefWidth="82.0" text="CHECK" />
                                     <Button layoutX="333.0" layoutY="415.0" mnemonicParsing="false" onAction="#Updatestatus" prefHeight="35.0" prefWidth="90.0" text="UPDATE" />
                                     <RadioButton fx:id="pendingRadioButton" layoutX="591.0" layoutY="342.0" mnemonicParsing="false" text="Pending" />
                                  </children>
@@ -70,21 +70,21 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Label layoutX="36.0" layoutY="42.0" prefHeight="18.0" prefWidth="79.0" text="Name" />
-                                    <Label layoutX="309.0" layoutY="42.0" prefHeight="18.0" prefWidth="71.0" text="Teacher ID" />
-                                    <Label layoutX="309.0" layoutY="87.0" prefHeight="18.0" prefWidth="71.0" text="Club Name" />
-                                    <Label layoutX="166.0" layoutY="152.0" text="Event Name" />
-                                    <Label layoutX="36.0" layoutY="209.0" prefHeight="18.0" prefWidth="71.0" text="Status" />
-                                    <TextField fx:id="markT_NameTextField" layoutX="108.0" layoutY="38.0" />
-                                    <TextField fx:id="markTeaIdTextField" layoutX="423.0" layoutY="38.0" />
-                                    <TextField fx:id="markTeaClubNameTextField" layoutX="423.0" layoutY="84.0" />
-                                    <ComboBox fx:id="T_Eventlist" layoutX="281.0" layoutY="148.0" prefWidth="150.0" />
-                                    <RadioButton fx:id="T_absentRadioButton" layoutX="153.0" layoutY="209.0" mnemonicParsing="false" text="Absent" />
-                                    <RadioButton fx:id="T_presentRadioButton" layoutX="258.0" layoutY="209.0" mnemonicParsing="false" text="Present" />
-                                    <Button fx:id="T_submitButton" layoutX="432.0" layoutY="260.0" mnemonicParsing="false" onAction="#T_handleSubmitButton" prefHeight="32.0" prefWidth="131.0" text="SUBMIT" />
-                                    <Button layoutX="124.0" layoutY="83.0" mnemonicParsing="false" onAction="#T_handleCheckButton" prefHeight="26.0" prefWidth="118.0" text="CHECK" />
-                                    <Button layoutX="146.0" layoutY="259.0" mnemonicParsing="false" onAction="#T_Updatestatus" prefHeight="33.0" prefWidth="131.0" text="UPDATE" />
-                                    <RadioButton fx:id="T_pendingRadioButton" layoutX="356.0" layoutY="209.0" mnemonicParsing="false" text="Pending" />
+                                    <Label layoutX="292.0" layoutY="78.0" prefHeight="18.0" prefWidth="79.0" text="Name" />
+                                    <Label layoutX="518.0" layoutY="78.0" prefHeight="18.0" prefWidth="71.0" text="Teacher ID" />
+                                    <Label layoutX="294.0" layoutY="152.0" prefHeight="20.0" prefWidth="81.0" text="Club Name" />
+                                    <Label layoutX="296.0" layoutY="250.0" prefHeight="20.0" prefWidth="86.0" text="Event Name" />
+                                    <Label layoutX="296.0" layoutY="328.0" prefHeight="18.0" prefWidth="71.0" text="Status:" />
+                                    <TextField fx:id="markT_NameTextField" layoutX="294.0" layoutY="102.0" prefHeight="40.0" />
+                                    <TextField fx:id="markTeaIdTextField" layoutX="518.0" layoutY="102.0" prefHeight="40.0" />
+                                    <TextField fx:id="markTeaClubNameTextField" layoutX="294.0" layoutY="177.0" prefHeight="40.0" />
+                                    <ComboBox fx:id="T_Eventlist" layoutX="296.0" layoutY="270.0" prefHeight="34.0" prefWidth="204.0" />
+                                    <RadioButton fx:id="T_absentRadioButton" layoutX="383.0" layoutY="329.0" mnemonicParsing="false" text="Absent" />
+                                    <RadioButton fx:id="T_presentRadioButton" layoutX="488.0" layoutY="329.0" mnemonicParsing="false" text="Present" />
+                                    <Button fx:id="T_submitButton" layoutX="518.0" layoutY="410.0" mnemonicParsing="false" onAction="#T_handleSubmitButton" prefHeight="35.0" prefWidth="90.0" text="SUBMIT" />
+                                    <Button layoutX="518.0" layoutY="177.0" mnemonicParsing="false" onAction="#T_handleCheckButton" prefHeight="40.0" prefWidth="82.0" text="CHECK" />
+                                    <Button layoutX="335.0" layoutY="410.0" mnemonicParsing="false" onAction="#T_Updatestatus" prefHeight="35.0" prefWidth="90.0" text="UPDATE" />
+                                    <RadioButton fx:id="T_pendingRadioButton" layoutX="586.0" layoutY="329.0" mnemonicParsing="false" text="Pending" />
                                  </children>
                               </AnchorPane>
                         </content>
