--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -58,9 +58,9 @@
                                     <Label layoutX="296.0" layoutY="343.0" prefHeight="20.0" prefWidth="51.0" text="Status:" />
                                     <RadioButton fx:id="absentRadioButton" layoutX="387.0" layoutY="342.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="78.0" text="Absent" />
                                     <RadioButton fx:id="presentRadioButton" layoutX="485.0" layoutY="342.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="79.0" text="Present" />
-                                    <Button fx:id="submitButton" layoutX="506.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleSubmitButton" prefHeight="35.0" prefWidth="90.0" text="SUBMIT" />
+                                    <Button fx:id="submitButton" layoutX="506.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleSubmitButton" prefHeight="35.0" prefWidth="90.0" styleClass="submitButton" text="SUBMIT" />
                                     <Button layoutX="525.0" layoutY="167.0" mnemonicParsing="false" onAction="#handleCheckButton" prefHeight="40.0" prefWidth="82.0" text="CHECK" />
-                                    <Button layoutX="333.0" layoutY="415.0" mnemonicParsing="false" onAction="#Updatestatus" prefHeight="35.0" prefWidth="90.0" text="UPDATE" />
+                                    <Button layoutX="333.0" layoutY="415.0" mnemonicParsing="false" onAction="#Updatestatus" prefHeight="35.0" prefWidth="90.0" styleClass="updateButton" text="UPDATE" />
                                     <RadioButton fx:id="pendingRadioButton" layoutX="591.0" layoutY="342.0" mnemonicParsing="false" text="Pending" />
                                  </children>
                               </AnchorPane>
@@ -81,9 +81,9 @@
                                     <ComboBox fx:id="T_Eventlist" layoutX="296.0" layoutY="270.0" prefHeight="34.0" prefWidth="204.0" />
                                     <RadioButton fx:id="T_absentRadioButton" layoutX="383.0" layoutY="329.0" mnemonicParsing="false" text="Absent" />
                                     <RadioButton fx:id="T_presentRadioButton" layoutX="488.0" layoutY="329.0" mnemonicParsing="false" text="Present" />
-                                    <Button fx:id="T_submitButton" layoutX="518.0" layoutY="410.0" mnemonicParsing="false" onAction="#T_handleSubmitButton" prefHeight="35.0" prefWidth="90.0" text="SUBMIT" />
+                                    <Button fx:id="T_submitButton" layoutX="518.0" layoutY="410.0" mnemonicParsing="false" onAction="#T_handleSubmitButton" prefHeight="35.0" prefWidth="90.0" styleClass="submitButton" text="SUBMIT" />
                                     <Button layoutX="518.0" layoutY="177.0" mnemonicParsing="false" onAction="#T_handleCheckButton" prefHeight="40.0" prefWidth="82.0" text="CHECK" />
-                                    <Button layoutX="335.0" layoutY="410.0" mnemonicParsing="false" onAction="#T_Updatestatus" prefHeight="35.0" prefWidth="90.0" text="UPDATE" />
+                                    <Button layoutX="335.0" layoutY="410.0" mnemonicParsing="false" onAction="#T_Updatestatus" prefHeight="35.0" prefWidth="90.0" styleClass="updateButton" text="UPDATE" />
                                     <RadioButton fx:id="T_pendingRadioButton" layoutX="586.0" layoutY="329.0" mnemonicParsing="false" text="Pending" />
                                  </children>
                               </AnchorPane>
@@ -103,9 +103,9 @@
                     <tabs>
                         <Tab text="Student's Progess">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="462.0" prefWidth="846.0">
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="462.0" prefWidth="444.0">
                                  <children>
-                                    <BarChart fx:id="attendanceRchart" layoutX="157.0" layoutY="14.0" prefHeight="279.0" prefWidth="405.0">
+                                    <BarChart fx:id="attendanceRchart" layoutX="157.0" layoutY="14.0" prefHeight="287.0" prefWidth="406.0">
                                       <xAxis>
                                         <CategoryAxis side="BOTTOM" />
                                       </xAxis>
@@ -121,11 +121,11 @@
                         </Tab>
                       <Tab text="Teacher's Progess">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="458.0" prefWidth="795.0">
                                  <children>
-                                    <ComboBox fx:id="T_eventComboBox" layoutX="23.0" layoutY="295.0" prefWidth="150.0" />
-                                    <Button layoutX="46.0" layoutY="160.0" mnemonicParsing="false" onAction="#showEventStatusChart_T" text="SET" />
-                                    <BarChart fx:id="attendanceRchart_T" layoutX="152.0" layoutY="14.0" prefHeight="250.0" prefWidth="402.0">
+                                    <ComboBox fx:id="T_eventComboBox" layoutX="389.0" layoutY="294.0" prefWidth="150.0" />
+                                    <Button layoutX="158.0" layoutY="289.0" mnemonicParsing="false" onAction="#showEventStatusChart_T" text="SET" />
+                                    <BarChart fx:id="attendanceRchart_T" layoutX="158.0" layoutY="35.0" prefHeight="250.0" prefWidth="402.0">
                                       <xAxis>
                                         <CategoryAxis side="BOTTOM" />
                                       </xAxis>
@@ -152,7 +152,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="474.0" prefWidth="744.0">
                                  <children>
-                                    <Button layoutX="256.0" layoutY="146.0" mnemonicParsing="false" onAction="#exportToCsv" text="GENERATE" />
+                                    <Button layoutX="433.0" layoutY="234.0" mnemonicParsing="false" onAction="#exportToCsv" text="GENERATE" />
                                  </children>
                               </AnchorPane>
                         </content>
@@ -161,7 +161,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Button layoutX="248.0" layoutY="132.0" mnemonicParsing="false" onAction="#exportToCsv_T" text="GENERATE" />
+                                    <Button layoutX="439.0" layoutY="238.0" mnemonicParsing="false" onAction="#exportToCsv_T" text="GENERATE" />
                                  </children>
                               </AnchorPane>
                         </content>
