--- a/src/main/resources/com/example/implementation/Club.fxml
+++ b/src/main/resources/com/example/implementation/Club.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="950.0" styleClass="background" stylesheets="@StyleSheets/Main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.ClubController">
+<AnchorPane fx:id="muaadhAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="950.0" styleClass="background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.ClubController">
    <children>
       <Button layoutX="182.0" layoutY="77.0" mnemonicParsing="false" onAction="#createClub" prefHeight="150.0" prefWidth="150.0" styleClass="clubBtns" textFill="WHITE">
          <font>
@@ -65,29 +67,29 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fill="WHITE" layoutX="185.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
+      <Text fill="#712377" layoutX="185.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
          <font>
-            <Font size="20.0" />
+            <Font name="Segoe UI Bold" size="16.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="621.0" layoutY="260.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Delete Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
+      <Text fill="#712377" layoutX="621.0" layoutY="260.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Delete Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
          <font>
-            <Font size="20.0" />
+            <Font name="Segoe UI Bold" size="16.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="623.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generate Report" textAlignment="CENTER" wrappingWidth="142.21630859375">
+      <Text fill="#712377" layoutX="623.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generate Report" textAlignment="CENTER" wrappingWidth="142.21630859375">
          <font>
-            <Font size="20.0" />
+            <Font name="Segoe UI Bold" size="16.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="405.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
+      <Text fill="#712377" layoutX="405.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
          <font>
-            <Font size="20.0" />
+            <Font name="Segoe UI Bold" size="16.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="186.0" layoutY="489.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
+      <Text fill="#712377" layoutX="186.0" layoutY="489.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View Club" textAlignment="CENTER" wrappingWidth="142.21630859375">
          <font>
-            <Font size="20.0" />
+            <Font name="Segoe UI Bold" size="16.0" />
          </font>
       </Text>
       <Button layoutX="402.0" layoutY="77.0" mnemonicParsing="false" onAction="#manageMembers" prefHeight="150.0" prefWidth="150.0">
@@ -99,10 +101,19 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fill="WHITE" layoutX="396.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Members" textAlignment="CENTER" wrappingWidth="163.71658325195312">
+      <Text fill="#712377" layoutX="396.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Members" textAlignment="CENTER" wrappingWidth="163.71658325195312">
          <font>
-            <Font size="20.0" />
+            <Font name="Segoe UI Bold" size="16.0" />
          </font>
       </Text>
+      <Button layoutX="44.0" layoutY="40.0" mnemonicParsing="false" onAction="#backButton" prefHeight="21.0" prefWidth="29.0">
+         <graphic>
+            <FontIcon iconLiteral="ion4-ios-arrow-round-back" iconSize="40" />
+         </graphic>
+      </Button>
    </children>
+   <stylesheets>
+      <URL value="@StyleSheets/Main.css" />
+      <URL value="@../../../Styles/Buttons.css" />
+   </stylesheets>
 </AnchorPane>
