--- a/src/main/resources/com/example/implementation/Update Members1.fxml
+++ b/src/main/resources/com/example/implementation/Update Members1.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -10,26 +12,42 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" styleClass="background" stylesheets="@StyleSheets/Main.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.implementation.UpdateMembers1">
-    <Text fill="WHITE" layoutX="34.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Club Name to Update">
+<AnchorPane prefHeight="600.0" prefWidth="950.0" styleClass="background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.implementation.UpdateMembers1">
+   <ImageView fitHeight="590.0" fitWidth="599.0" layoutX="175.0" layoutY="5.0" opacity="0.15">
+      <image>
+         <Image url="@Icons/update%20member.png" />
+      </image>
+   </ImageView>
+    <Text layoutX="312.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Club Name">
         <font>
-            <Font size="26.0" />
+            <Font size="16.0" />
         </font>
     </Text>
-    <TextField fx:id="updClub" layoutX="380.0" layoutY="73.0" prefHeight="30.0" prefWidth="400.0">
+    <TextField fx:id="updClub" layoutX="436.0" layoutY="129.0" prefHeight="31.0" prefWidth="203.0">
         <font>
             <Font size="25.0" />
         </font>
     </TextField>
-    <Button layoutX="331.0" layoutY="179.0" mnemonicParsing="false" onAction="#getDetails" prefHeight="40.0" prefWidth="165.0" text="Get Details">
+    <Button layoutX="438.0" layoutY="196.0" mnemonicParsing="false" onAction="#getDetails" prefHeight="56.0" prefWidth="54.0">
         <font>
             <Font size="22.0" />
         </font>
+      <graphic>
+         <FontIcon iconLiteral="fltfal-arrow-curve-down-left-20" iconSize="40" />
+      </graphic>
     </Button>
-    <TableView fx:id="clubsTable" layoutY="231.0" prefHeight="267.0" prefWidth="800.0" styleClass="tables">
+    <Text fx:id="errorCall" layoutX="436.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="319.18113708496094" />
+    <Line endX="853.0" endY="7.62939453125E-6" layoutX="97.0" layoutY="56.0" startX="-100.0" />
+   <Label layoutX="403.0" layoutY="14.0" text="Update Club" textFill="#712377">
+      <font>
+         <Font name="System Bold" size="24.0" />
+      </font>
+   </Label>
+    <TableView fx:id="clubsTable" editable="true" layoutX="119.0" layoutY="274.0" prefHeight="289.0" prefWidth="712.0" styleClass="tables" stylesheets="@StyleSheets/Main.css">
         <columns>
-            <TableColumn fx:id="clubId" editable="false" prefWidth="400.8989690542221" resizable="false" styleClass="tableColumn">
+            <TableColumn fx:id="clubId" editable="false" prefWidth="-1.0" styleClass="tableColumn">
                 <graphic>
                     <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Club ID">
                         <font>
@@ -38,7 +56,7 @@
                     </Text>
                 </graphic>
             </TableColumn>
-            <TableColumn fx:id="clubName" editable="false" prefWidth="398.1011047363281" resizable="false" styleClass="tableColumn">
+            <TableColumn fx:id="clubName" editable="false" prefWidth="-1.0" styleClass="tableColumn">
 
                 <graphic>
                     <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Club Name">
@@ -49,23 +67,17 @@
                 </graphic>
             </TableColumn>
         </columns>
+      <columnResizePolicy>
+         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+      </columnResizePolicy>
     </TableView>
-    <Button layoutX="-2.0" layoutY="-7.0" mnemonicParsing="false" onAction="#backBtn" style="-fx-border-color: transparent;" styleClass="homeBackBtn">
-        <graphic>
-            <ImageView fitHeight="50.0" fitWidth="55.0">
-                <Image url="@Icons/back_arrow.png" />
-            </ImageView>
-        </graphic>
+    <Button layoutX="34.0" layoutY="68.0" mnemonicParsing="false" onAction="#backBtn" style="-fx-border-color: transparent;" styleClass="homeBackBtn">
+      <graphic>
+         <FontIcon iconLiteral="ion4-ios-arrow-round-back" iconSize="40" />
+      </graphic>
     </Button>
-    <Text fx:id="errorCall" fill="WHITE" layoutX="256.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="319.18113708496094">
-        <font>
-            <Font size="18.0" />
-        </font>
-    </Text>
-    <Line endX="703.0000610351562" endY="-3.814697265625E-6" layoutX="97.0" layoutY="56.0" startX="-100.0" stroke="WHITE" />
-   <ImageView fitHeight="44.0" fitWidth="46.0" layoutX="380.0" layoutY="2.0">
-      <image>
-         <Image url="@Icons/update%20member.png" />
-      </image>
-   </ImageView>
+   <stylesheets>
+      <URL value="@StyleSheets/Main.css" />
+      <URL value="@../../../Styles/Buttons.css" />
+   </stylesheets>
 </AnchorPane>
