--- a/src/main/resources/com/example/implementation/Delete Club.fxml
+++ b/src/main/resources/com/example/implementation/Delete Club.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" styleClass="background" stylesheets="@StyleSheets/Main.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.implementation.DeleteClub">
+<AnchorPane prefHeight="600.0" prefWidth="950.0" styleClass="background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.implementation.DeleteClub">
    <children>
       <Text fill="WHITE" layoutX="43.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Club Name to Delete" wrappingWidth="313.3064422607422">
          <font>
@@ -67,4 +68,9 @@
          </image>
       </ImageView>
    </children>
+   <stylesheets>
+      <URL value="@StyleSheets/Main.css" />
+      <URL value="@../../../Styles/MainPage.css" />
+      <URL value="@../../../Styles/Buttons.css" />
+   </stylesheets>
 </AnchorPane>
